force-app/main/default/objects/List_Type_Private__c/List_Type_Private__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>List Type custom setting with private visibility</description>
    <label>List Type Private</label>
</CustomObject>