force-app/main/default/objects/List_Type_Private__c/fields/Test_Currency__c.field-meta.xml
<CustomField>
    <fullName>Test_Currency__c</fullName>
    <defaultValue>1000</defaultValue>
    <description>Currency field</description>
    <label>Test Currency</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>