force-app/main/default/objects/List_Type_Private__c/fields/Test_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Test_Date_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Test Date Time</label>
    <type>DateTime</type>
</CustomField>