force-app/main/default/objects/List_Type_Private__c/fields/Test_Email__c.field-meta.xml
<CustomField>
    <fullName>Test_Email__c</fullName>
    <defaultValue>&#39;abc@123.com&#39;</defaultValue>
    <label>Test Email</label>
    <type>Email</type>
</CustomField>