force-app/main/default/objects/List_Type_Private__c/fields/Test_Number__c.field-meta.xml
<CustomField>
    <fullName>Test_Number__c</fullName>
    <defaultValue>18.2</defaultValue>
    <label>Test Number</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>