force-app/main/default/objects/List_Type_Private__c/fields/Test_Percent__c.field-meta.xml
<CustomField>
    <fullName>Test_Percent__c</fullName>
    <defaultValue>22.5</defaultValue>
    <label>Test Percent</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>