force-app/main/default/objects/List_Type_Private__c/fields/Test_Phone__c.field-meta.xml
<CustomField>
    <fullName>Test_Phone__c</fullName>
    <defaultValue>&#39;1234567890&#39;</defaultValue>
    <label>Test Phone</label>
    <type>Phone</type>
</CustomField>