force-app/main/default/objects/List_Type_Private__c/fields/Test_Text__c.field-meta.xml
<CustomField>
    <fullName>Test_Text__c</fullName>
    <defaultValue>&#39;sample text for testing&#39;</defaultValue>
    <label>Test Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>