force-app/main/default/objects/List_Type_Private__c/fields/Test_URL__c.field-meta.xml
<CustomField>
    <fullName>Test_URL__c</fullName>
    <defaultValue>&#39;https://salesforce.com&#39;</defaultValue>
    <label>Test URL</label>
    <type>Url</type>
</CustomField>